# bib2json

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
src/: lib.rs  main.rs
test/: bibtex.py
