[package]
name = "bib2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# biblatex = "0.9.1"
biblatex = { git = "https://github.com/typst/biblatex", branch="main" }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
