[package]
name = "bib2json"
version = "0.1.2"
edition = "2021"

[dependencies]
biblatex = { version = "0.10" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
